// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccountPasswordForm /> should render properly 1`] = `
.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-0 {
  display: block;
  padding-bottom: 8px;
  color: #808080;
}

.emotion-2 {
  position: relative;
}

.emotion-1 {
  outline-offset: 0;
  padding: 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #2e2e2e;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-1:focus {
  border: 2px solid #73b61c;
  background-color: #ffffff;
  outline: #73b61c;
  color: #000000;
}

.emotion-3 {
  padding-top: 8px;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
}

.emotion-17 button {
  margin-right: 16px;
}

.emotion-15 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-15:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-15,
.emotion-15:hover,
.emotion-15:visited {
  background-color: #808080;
}

.emotion-15:hover {
  opacity: 0.5;
}

.emotion-15[aria-disabled=true] {
  background-color: #808080;
}

.emotion-16 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-16:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-16[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-16,
.emotion-16:hover,
.emotion-16:visited {
  background-color: #73b61c;
}

.emotion-16:hover {
  background-color: #b8d652;
}

.emotion-16[aria-disabled=true] {
  background-color: #808080;
}

<form
  action=""
  className="emotion-18"
  method="post"
  onSubmit={[Function]}
>
  <div
    className="emotion-4"
  >
    <label
      className="emotion-0"
      htmlFor="currentPassword"
    >
      Current Password
    </label>
    <div
      className="emotion-2"
    >
      <input
        autoFocus={true}
        className="emotion-1"
        id="currentPassword"
        name="currentPassword"
        onChange={[Function]}
        type="password"
        value=""
      />
    </div>
    <div
      className="emotion-3"
    >
       
    </div>
  </div>
  <div
    className="emotion-4"
  >
    <label
      className="emotion-0"
      htmlFor="newPassword"
    >
      New Password
    </label>
    <div
      className="emotion-2"
    >
      <input
        className="emotion-1"
        id="newPassword"
        name="newPassword"
        onChange={[Function]}
        type="password"
        value=""
      />
    </div>
    <div
      className="emotion-3"
    >
       
    </div>
  </div>
  <div
    className="emotion-4"
  >
    <label
      className="emotion-0"
      htmlFor="confirmPassword"
    >
      Confirm Password
    </label>
    <div
      className="emotion-2"
    >
      <input
        className="emotion-1"
        id="confirmPassword"
        name="confirmPassword"
        onChange={[Function]}
        type="password"
        value=""
      />
    </div>
    <div
      className="emotion-3"
    >
       
    </div>
  </div>
  <div
    className="emotion-17"
  >
    <button
      className="emotion-15"
      onClick={[Function]}
      type="button"
    >
      Cancel
    </button>
    <button
      aria-disabled={true}
      className="emotion-16"
      onClick={[Function]}
      type="submit"
    >
      Save
    </button>
  </div>
</form>
`;

exports[`<AccountPasswordForm /> should render properly 2`] = `
.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
}

.emotion-5 button {
  margin-right: 16px;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-4,
.emotion-4:hover,
.emotion-4:visited {
  background-color: #73b61c;
}

.emotion-4:hover {
  background-color: #b8d652;
}

.emotion-4[aria-disabled=true] {
  background-color: #808080;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  justify-self: flex-start;
  color: #000000;
  font-weight: 500;
  background-color: #ffffff;
  border: 1px solid #4ac565;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
}

.emotion-0 {
  width: 40px;
  height: 40px;
  color: #ffffff;
  background-color: #4ac565;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 16px;
  padding-right: 16px;
}

<div>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-0"
      >
        <svg
          data-file-name="checkmark.svg"
          width={20}
        />
      </div>
      <div
        className="emotion-1"
      >
        New Password Saved!
      </div>
    </div>
  </div>
  <div
    className="emotion-5"
  >
    <button
      className="emotion-4"
      onClick={[Function]}
      type="button"
    >
      Edit Password Again
    </button>
  </div>
</div>
`;

exports[`<AccountPasswordForm /> should render properly 3`] = `
.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-0 {
  display: block;
  padding-bottom: 8px;
  color: #808080;
}

.emotion-2 {
  position: relative;
}

.emotion-1 {
  outline-offset: 0;
  padding: 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #2e2e2e;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-1:focus {
  border: 2px solid #73b61c;
  background-color: #ffffff;
  outline: #73b61c;
  color: #000000;
}

.emotion-3 {
  padding-top: 8px;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
}

.emotion-17 button {
  margin-right: 16px;
}

.emotion-15 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-15:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-15,
.emotion-15:hover,
.emotion-15:visited {
  background-color: #808080;
}

.emotion-15:hover {
  opacity: 0.5;
}

.emotion-15[aria-disabled=true] {
  background-color: #808080;
}

.emotion-16 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-16:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-16[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-16,
.emotion-16:hover,
.emotion-16:visited {
  background-color: #73b61c;
}

.emotion-16:hover {
  background-color: #b8d652;
}

.emotion-16[aria-disabled=true] {
  background-color: #808080;
}

<form
  action=""
  className="emotion-18"
  method="post"
  onSubmit={[Function]}
>
  <div
    className="emotion-4"
  >
    <label
      className="emotion-0"
      htmlFor="currentPassword"
    >
      Current Password
    </label>
    <div
      className="emotion-2"
    >
      <input
        autoFocus={true}
        className="emotion-1"
        id="currentPassword"
        name="currentPassword"
        onChange={[Function]}
        type="password"
        value=""
      />
    </div>
    <div
      className="emotion-3"
    >
       
    </div>
  </div>
  <div
    className="emotion-4"
  >
    <label
      className="emotion-0"
      htmlFor="newPassword"
    >
      New Password
    </label>
    <div
      className="emotion-2"
    >
      <input
        className="emotion-1"
        id="newPassword"
        name="newPassword"
        onChange={[Function]}
        type="password"
        value=""
      />
    </div>
    <div
      className="emotion-3"
    >
       
    </div>
  </div>
  <div
    className="emotion-4"
  >
    <label
      className="emotion-0"
      htmlFor="confirmPassword"
    >
      Confirm Password
    </label>
    <div
      className="emotion-2"
    >
      <input
        className="emotion-1"
        id="confirmPassword"
        name="confirmPassword"
        onChange={[Function]}
        type="password"
        value=""
      />
    </div>
    <div
      className="emotion-3"
    >
       
    </div>
  </div>
  <div
    className="emotion-17"
  >
    <button
      className="emotion-15"
      onClick={[Function]}
      type="button"
    >
      Cancel
    </button>
    <button
      aria-disabled={true}
      className="emotion-16"
      onClick={[Function]}
      type="submit"
    >
      Save
    </button>
  </div>
</form>
`;

exports[`<AccountPasswordForm /> should render properly when a user cancels 1`] = `
.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-0 {
  display: block;
  padding-bottom: 8px;
  color: #808080;
}

.emotion-2 {
  position: relative;
}

.emotion-1 {
  outline-offset: 0;
  padding: 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #2e2e2e;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-1:focus {
  border: 2px solid #73b61c;
  background-color: #ffffff;
  outline: #73b61c;
  color: #000000;
}

.emotion-3 {
  padding-top: 8px;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
}

.emotion-17 button {
  margin-right: 16px;
}

.emotion-15 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-15:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-15,
.emotion-15:hover,
.emotion-15:visited {
  background-color: #808080;
}

.emotion-15:hover {
  opacity: 0.5;
}

.emotion-15[aria-disabled=true] {
  background-color: #808080;
}

.emotion-16 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-16:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-16[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-16,
.emotion-16:hover,
.emotion-16:visited {
  background-color: #73b61c;
}

.emotion-16:hover {
  background-color: #b8d652;
}

.emotion-16[aria-disabled=true] {
  background-color: #808080;
}

<form
  action=""
  className="emotion-18"
  method="post"
  onSubmit={[Function]}
>
  <div
    className="emotion-4"
  >
    <label
      className="emotion-0"
      htmlFor="currentPassword"
    >
      Current Password
    </label>
    <div
      className="emotion-2"
    >
      <input
        autoFocus={true}
        className="emotion-1"
        id="currentPassword"
        name="currentPassword"
        onChange={[Function]}
        type="password"
        value=""
      />
    </div>
    <div
      className="emotion-3"
    >
       
    </div>
  </div>
  <div
    className="emotion-4"
  >
    <label
      className="emotion-0"
      htmlFor="newPassword"
    >
      New Password
    </label>
    <div
      className="emotion-2"
    >
      <input
        className="emotion-1"
        id="newPassword"
        name="newPassword"
        onChange={[Function]}
        type="password"
        value=""
      />
    </div>
    <div
      className="emotion-3"
    >
       
    </div>
  </div>
  <div
    className="emotion-4"
  >
    <label
      className="emotion-0"
      htmlFor="confirmPassword"
    >
      Confirm Password
    </label>
    <div
      className="emotion-2"
    >
      <input
        className="emotion-1"
        id="confirmPassword"
        name="confirmPassword"
        onChange={[Function]}
        type="password"
        value=""
      />
    </div>
    <div
      className="emotion-3"
    >
       
    </div>
  </div>
  <div
    className="emotion-17"
  >
    <button
      className="emotion-15"
      onClick={[Function]}
      type="button"
    >
      Cancel
    </button>
    <button
      aria-disabled={true}
      className="emotion-16"
      onClick={[Function]}
      type="submit"
    >
      Save
    </button>
  </div>
</form>
`;
